--- a/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.html
+++ b/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.html
@@ -1,20 +1,28 @@
-<mat-tab-group>
-    <mat-tab label="Create user">
-        <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
-            <input id="username" type="text" placeholder="username" formControlName="username">
-            <input id="password" type="password" placeholder="password" formControlName="password">
-            <button id="signup" type="submit" [disabled]="!signupForm.valid">Sign up</button>
-            <!-- <button id="login">Login</button> -->
-        </form>
-    </mat-tab>
-    <mat-tab label="Login">
-        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-            <input id="username" type="text" placeholder="username" formControlName="username">
-            <input id="password" type="password" placeholder="password" formControlName="password">
-            <input id="rememberMe" type="checkbox" formControlName="rememberMe">
-            <button id="signup" type="submit" [disabled]="!loginForm.valid">Login</button>
-            <!-- <button id="login">Login</button> -->
-        </form>
-    </mat-tab>
-</mat-tab-group>
-<p id="feedback-message" [ngClass]="success ? 'success-message' : 'error-message'">{{feedbackmsg}}</p>
+<div id="wrapper">
+    <mat-tab-group id="tab-group">
+        <mat-tab label="Create user">
+            <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
+                <input id="username" type="text" placeholder="username" formControlName="username">
+                <input id="password" type="password" placeholder="password" formControlName="password">
+                <button id="signup" type="submit" [disabled]="!signupForm.valid">Sign up</button>
+                <!-- <button id="login">Login</button> -->
+                <p id="feedback-message-signup" [ngClass]="success ? 'success-message' : 'error-message'">
+                    {{feedbackmsgsignup}}</p>
+            </form>
+        </mat-tab>
+        <mat-tab label="Login">
+            <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                <input id="username" type="text" placeholder="username" formControlName="username">
+                <input id="password" type="password" placeholder="password" formControlName="password">
+                <div id="rememberMe">
+                    <input name="rememberUser" type="checkbox" formControlName="rememberMe">
+                    <label for="rememberUser">Remember Login</label>
+                </div>
+                <button id="signup" type="submit" [disabled]="!loginForm.valid">Login</button>
+                <!-- <button id="login">Login</button> -->
+                <p id="feedback-message-login" [ngClass]="success ? 'success-message' : 'error-message'">
+                    {{feedbackmsglogin}}</p>
+            </form>
+        </mat-tab>
+    </mat-tab-group>
+</div>
