--- a/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.scss
+++ b/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.scss
@@ -1,7 +1,52 @@
+form {
+
+    input {
+        display: block;
+        margin-top: 10px;
+        width: 98.6%;
+        height: 20px;
+    }
+
+    button,
+    p {
+        display: block;
+        margin-top: 15px;
+        width: 100%;
+    }
+
+    div {
+        display: block;
+
+        input {
+            margin-top: 10px;
+            display: inline;
+            width: 15px;
+            height: 15px;
+        }
+
+        label {
+            margin-left: 5px;
+            font-size: 14px;
+            color: gray;
+        }
+    }
+}
+
 .error-message {
     color: rgb(208, 68, 68);
 }
 
 .success-message {
     color: rgb(68, 208, 87);
+}
+
+#wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+}
+
+#tab-group {
+    width: 600px;
 }
