--- a/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.html
+++ b/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.html
@@ -4,6 +4,7 @@
             <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
                 <input id="username" type="text" placeholder="username" formControlName="username">
                 <input id="password" type="password" placeholder="password" formControlName="password">
+                <input id="honeypot-00" class="honeypot" type="text" formArrayName="honeypot">
                 <button id="signup" type="submit" [disabled]="!signupForm.valid">Sign up</button>
                 <!-- <button id="login">Login</button> -->
                 <p id="feedback-message-signup" [ngClass]="success ? 'success-message' : 'error-message'">
@@ -18,6 +19,7 @@
                     <input name="rememberUser" type="checkbox" formControlName="rememberMe">
                     <label for="rememberUser">Remember Login</label>
                 </div>
+                <input id="honeypot-01" class="honeypot" type="text" formControlName="honeypot">
                 <button id="signup" type="submit" [disabled]="!loginForm.valid">Login</button>
                 <!-- <button id="login">Login</button> -->
                 <p id="feedback-message-login" [ngClass]="success ? 'success-message' : 'error-message'">
