--- a/webapp/neotopia_railways_navigator/src/styles.scss
+++ b/webapp/neotopia_railways_navigator/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,10 @@ $neotopia_railways_navigator-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$neotopia_railways_navigator-theme: mat.define-light-theme((
-  color: (
-    primary: $neotopia_railways_navigator-primary,
-    accent: $neotopia_railways_navigator-accent,
-    warn: $neotopia_railways_navigator-warn,
-  )
-));
+$neotopia_railways_navigator-theme: mat.define-light-theme((color: (primary: $neotopia_railways_navigator-primary,
+        accent: $neotopia_railways_navigator-accent,
+        warn: $neotopia_railways_navigator-warn,
+      )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,7 +31,26 @@ $neotopia_railways_navigator-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 html {
-    font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+a:hover {
+  font-style: italic;
+  cursor: pointer;
+}
