jwt auth working

--- a/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.html
+++ b/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="top-bar">
     <nav>
         <a href="#">Trip planner</a>
-        <a href="#">Timetable</a>
+        <a (click)="getLastTrainScheduleDate()" href="#">Timetable</a>
         <a href="#">My tickets</a>
     </nav>
     <div id="user-profile">
@@ -10,4 +10,5 @@
         <button type="button" (click)="onLogOut()">Log out</button>
     </div>
 </div>
-<p>Logged in as: {{logged_user}}</p>
+<p>Logged in as: {{loggedUser}}</p>
+<p>{{lastScheduledDate}}</p>
