--- a/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.html
+++ b/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.html
@@ -4,11 +4,7 @@
         <a (click)="getLastTrainScheduleDate()" href="#">Timetable</a>
         <a href="#">My tickets</a>
     </nav>
-    <div id="user-profile">
-        <mat-icon id="profile-icon" aria-hidden="false" aria-label="user profile icon"
-            fontIcon="account_circle"></mat-icon>
-        <button type="button" (click)="onLogOut()">Log out</button>
-    </div>
+    <app-user-profile></app-user-profile>
 </div>
 <p>Logged in as: {{loggedUser}}</p>
 <p>{{lastScheduledDate}}</p>
