--- a/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.scss
+++ b/webapp/neotopia_railways_navigator/src/app/pages/home/home.component.scss
@@ -3,27 +3,12 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     height: 50px;
+    padding: 0 10px 0 0;
 
     nav {
         display: flex;
         justify-content: flex-start;
         gap: 20px;
         color: rgb(85, 85, 85);
-    }
-
-    #user-profile {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 10px;
-
-        #profile-icon {
-            color: rgb(85, 85, 85);
-        }
-
-        #profile-icon:hover {
-            cursor: pointer;
-            color: black;
-        }
     }
 }
