--- a/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.scss
+++ b/webapp/neotopia_railways_navigator/src/app/pages/login/login.component.scss
@@ -64,3 +64,12 @@ form {
 #passwordVisibilityLogin {
     margin-bottom: 10px;
 }
+
+#resend-mail {
+    font-size: 13px;
+}
+
+#resend-mail:hover {
+    cursor: pointer;
+    color: #3b69af
+}
