--- a/webapp/neotopia_railways_navigator/src/app/app.component.scss
+++ b/webapp/neotopia_railways_navigator/src/app/app.component.scss
@@ -1,9 +1,12 @@
 header,
 main {
-    padding: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 50px;
 }
 
 footer {
+    background-color: #fff;
     position: fixed;
     bottom: 0;
     width: 100%;
