--- a/webapp/neotopia_railways_navigator/src/app/pages/home/my-tickets/my-tickets.component.html
+++ b/webapp/neotopia_railways_navigator/src/app/pages/home/my-tickets/my-tickets.component.html
@@ -1,1 +1,10 @@
-<p>my-tickets works!</p>
+<mat-card>
+    <mat-card-content>
+        @if (currentUser) {
+        <h4>Active User: {{currentUser.username}}</h4>
+        <p>Email: {{currentUser.email}}</p>
+        <p>Confirmed?: {{currentUser.confirmed}}</p>
+        <p>Created At: {{currentUser.createdAt}}</p>
+        }
+    </mat-card-content>
+</mat-card>
